--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -21,4 +21,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Viewer\GamesControl\Components\" />
+  </ItemGroup>
+
 </Project>
